lander.lessons.lander.lvl3_fly_the_lander.FlyTheLander.scala.code
  override def initialize() {
  }

  override def step() {
  	val liste:list[Point]=getSol()
  	var debut = Array[Double](2)
  	var fin = Array[Double](2)
  	for (i<- 0 to liste.length-2) {
  		if (liste(i).y==liste(i+1).y) {
  			debut(0)=liste(i).x
  			debut(1)=liste(i).y
  			fin(0)=liste(i+1).x
  			fin(1)=liste(i+1).y
  		}
  	}
  	if (getX>debut(0) && getX<fin(0)) {
  		if (getVitesseY()<(-9)) {
			setPousseeDesiree(4)	
		} else {
			setPousseeDesiree(0)
		}	
  	} else { 
  		if (getX<debut(0)) {
  			setAngleDesire(-45)
  		} else {
  			setAngleDesire(45)
  		}
  		
  			setPousseeDesiree(2)
  	}
  	
  }
